--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -10,7 +10,7 @@ on:
 jobs:
     analyze:
         name: Analyze Code
-        runs-on: ubuntu-laest
+        runs-on: ubuntu-latest
         permissions:
             actions: read
             contents: read
