--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,10 +2,16 @@ name: "CodeQL"
 
 on:
     push: 
-        branches:
-            - "main"
-        paths:
-            - '**/src/**'
+      branches:
+        - "main"
+      paths:
+        - '**/src/**'
+
+    pull_request:  
+      branches:
+        - "main"
+      paths:
+        - '**/src/**'
 
 jobs:
     analyze:
