--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -35,6 +35,7 @@ jobs:
               uses: github/codeql-action/init@v2
               with:
                 languages: ${{ matrix.language }}
+                queries: security-and-quality
 
             - name: Autobuild
               uses: github/codeql-action/autobuild@v2
